# systemd-echo

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  main.c  systemd-echo.conf
systemd/: Makefile.am  systemd-echo.service.in  systemd-echo.socket.in
